--- a/restaurant/templates/restaurant/sidebar.html
+++ b/restaurant/templates/restaurant/sidebar.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="py-2 border-bottom border-muted">
-            <a href="#">
+            <a href="{% url 'close-register' shopId.id %}">
                 <p class="text-white px-3 fs-5 fw-bold d-flex align-items-center">
                     <span class="iconify me-2" data-icon="ant-design:close-outlined"></span> Close Register
                 </p>
