--- a/restaurant/templates/table/table_cart.html
+++ b/restaurant/templates/table/table_cart.html
@@ -55,7 +55,7 @@
             </div>
             <div>
                 <label for="received__cash" class="form-label fw-bold mt-2">Amount Received</label>
-                <input autofocus="true" name="amount_received" type="number" class="d-block w-100 border border-1 border-muted" id="received__cash" placeholder="Enter received amount..." onkeyup="cash()" required />
+                <input autofocus="true" name="amount_received" type="number" class="d-block w-100 border border-1 border-muted" id="received__cash" placeholder="Enter received amount..." onkeyup="cashOnekChash()" required />
             </div>
             <div class="my-1">
                 <label for="discount__cash" class="form-label fw-bold">Discount</label>
