--- a/SAAS/templates/account/login.html
+++ b/SAAS/templates/account/login.html
@@ -3,10 +3,11 @@
 
 <div class="main">
     <p class="sign" align="center">Log In</p>
-    <form class="form1">
-      <input class="un " type="text" align="center" placeholder="Username" required>
-      <input class="pass" type="password" align="center" placeholder="Password" required>
-      <button type="submit" class="submit" align="center">Log in</button>
-      <p class="forgot" align="center"><a href="#">Forgot Password?</p>       
+    <form class="form1" method="POST" action="">
+      {% csrf_token %}
+        <input class="un " type="text" name="username" align="center" placeholder="Username" required>
+        <input class="pass" type="password" name="password" align="center" placeholder="Password" required>
+        <button type="submit" class="submit" align="center">Log in</button>
+        <p class="forgot" align="center"><a href="#">Forgot Password?</p>       
       </form>    
     </div>
