--- a/restaurant/templates/table/table_order_details.html
+++ b/restaurant/templates/table/table_order_details.html
@@ -16,7 +16,7 @@
             </a>
         </section>
         <section class="restaurant__allOrdersHeaderTitle">
-            <h5 class="text-white fw-bold">Order #{{ order_details.id }}</h5>
+            <h5 class="text-white fw-bold">Order #1000</h5>
         </section>
 
         {% comment %}This is a hidden layer section starts{% endcomment %}
@@ -32,19 +32,19 @@
             <section class="border-bottom border-1 py-3 border-muted px-3">
                 <div>
                     <p class="text-muted">Store</p>
-                    <h5 class="fw-bold">{{ shopId.shop_name }}</h5>
+                    <h5 class="fw-bold">No Name</h5>
                 </div>
                 <div>
                     <p class="text-muted">Order ID</p>
-                    <h5 class="fw-bold">#{{ order_details.id }}</h5>
+                    <h5 class="fw-bold">#12000</h5>
                 </div>
                 <div>
                     <p class="text-muted">Customer</p>
-                    <p class="fw-bold">{{ order_details.customer.customer_name }}</p>
+                    <p class="fw-bold">Goku Islam</p>
                 </div>
                 <div>
                     <p class="text-muted">Order Date</p>
-                    <p class="fw-bold">{{ order_details.created_at }}</p>
+                    <p class="fw-bold">No Date</p>
                 </div>
             </section>
 
@@ -52,7 +52,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <section>
                         <p class="text-muted">Payment Status</p>
-                        <p class="fw-bold">{% if order_details.status == "PAID" %}PAID{% else %}UNPAID{% endif %}</p>
+                        <p class="fw-bold">Active</p>
                     </section>
                     {% if order_details.status == "PAID" %}
                         <section>
@@ -66,7 +66,7 @@
                 </div>
                 <div>
                     <p class="text-muted">Payment Method</p>
-                    <p class="fw-bold">{{ order_details.payment_method }}</p>
+                    <p class="fw-bold">NO PAYMENT NEED</p>
                 </div>
             </section>
 
@@ -74,17 +74,17 @@
                 <div>
                     <section class="d-flex justify-content-between align-items-center">
                         <p class="text-muted">Subtotal</p>
-                        <p class="fw-bold">${{ order_details.grand_total }}</p>
+                        <p class="fw-bold">$1200</p>
                     </section>
                     <section class="d-flex justify-content-between align-items-center border-top border-muted border-1 pt-3">
                         <h5 class="fw-bold text-primary">Total</h5>
-                        <h5 class="fw-bold">${{ order_details.grand_total }}</h5>
+                        <h5 class="fw-bold">$1110000</h5>
                     </section>
                 </div>
             </section>
 
             <section class="restaurant__orderPrintBtn d-flex justify-content-center px-3 pt-3">
-                <a href="{% url 'restaurant-receipt' shopId.id order_details.id %}" class="w-100">
+                <a href="#" class="w-100">
                     <button class="fw-bold">Print Receipt</button>
                 </a>
             </section>
@@ -108,16 +108,16 @@
                             </tr>
                             </thead>
                             <tbody class="restaurant__orderDetailsTableBody">
-                                {% for order in order_details.items.all %}
+                                
                                 <tr>
-                                    <td colspan="2">{{ order.item.item_name }}</td>
-                                    <td>{{ order_details.payment_method }}</td>
-                                    <td>{{ order.quantity }}</td>
-                                    <td>${{order.item.item_price }}</td>
-                                    <td>${{ order_details.discount }}</td>
-                                    <td>${{ order_details.grand_total }}</td>
+                                    <td colspan="2">No Name</td>
+                                    <td>NO PAYMENT</td>
+                                    <td>1200</td>
+                                    <td>$1200</td>
+                                    <td>$1200</td>
+                                    <td>$1200</td>
                                 </tr>
-                                {% endfor %}
+                   
                             </tbody>
                         </table>
                     </section>
