--- a/static/css/admin-panel/admin-panel.css
+++ b/static/css/admin-panel/admin-panel.css
@@ -183,12 +183,6 @@
     border-right: 1px solid var(--blue);
     padding: 10px 5px;
 }
-.main____stat{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}
 
 
 /* chart style */
@@ -212,11 +206,65 @@
 
 
 
+/* select and filter */
+/* select style */
+.order_____status{
+  padding: 20px;
+}
+#filter__btn {
+  width: 7%;
+  height: 100%;
+  padding: 10px 25px;
+  border: 2px solid #198E6C;
+  font-weight: 500;
+  background: transparent;
+  cursor: pointer;
+  background: #198E6C;
+  color: #fff;
+  z-index: 1;
+  font-size: 0.9rem;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+}
+
+.filter__btnClass {
+  width: 100% !important;
+}
+
+#filter__btn::after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 100%;
+  top: 0;
+  right: 0;
+  z-index: -1;
+  background: #f5f5f5;
+  transition: all 0.3s ease;
+}
+
+#filter__btn:hover {
+  color: #198E6C;
+}
+
+#filter__btn:hover::after {
+  left: 0;
+  width: 100%;
+}
+
+
 @media (max-width:550px){
     .indi_____stat{
         width: 100%;
     }
 }
+@media (max-width: 1199px) {
+  #filter__btn {
+      width: 10%;
+  }
+}
+
 @media (max-width:1480px){
     .sidebar_____container{
         width: 22%;
