--- a/static/css/admin-panel/orders.css
+++ b/static/css/admin-panel/orders.css
@@ -47,6 +47,50 @@
     background-color: var(--deep-white) !important;
 }
 
+#filter__btn {
+  width: 7%;
+  height: 100%;
+  padding: 10px 25px;
+  border: 2px solid #198E6C;
+  font-weight: 500;
+  background: transparent;
+  cursor: pointer;
+  background: #198E6C;
+  color: #fff;
+  z-index: 1;
+  font-size: 0.9rem;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+}
+
+#filter__btn::after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 100%;
+  top: 0;
+  right: 0;
+  z-index: -1;
+  background: #f5f5f5;
+  transition: all 0.3s ease;
+}
+
+#filter__btn:hover {
+  color: #198E6C;
+}
+
+#filter__btn:hover::after {
+  left: 0;
+  width: 100%;
+}
+
+
+@media (max-width: 1199px) {
+    #filter__btn {
+        width: 10%;
+    }
+}
 
 @media (max-width: 475px){
     .main____search________content{
